idea/testData/checker/regression/ClassDeclarationAsExpression.fir.kt
val p = 1 <error descr="[AMBIGUITY] Ambiguity between candidates: [kotlin/Int.compareTo, kotlin/Int.compareTo, kotlin/Int.compareTo, ...]"><</error> <error descr="[EXPRESSION_REQUIRED] ">class A {
    fun f() {
        f()
    }
}</error>
